Resolving reference issues

--- a/WebAutomation.SpecFlow/WebAutomation.SpecFlow/WebAutomation.SpecFlow.csproj
+++ b/WebAutomation.SpecFlow/WebAutomation.SpecFlow/WebAutomation.SpecFlow.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Edge.SeleniumTools" Version="3.141.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.TestPlatform" Version="16.11.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="SpecFlow" Version="3.9.8" />
