Exercise-Feature scenario outline creation

--- a/WebAutomation.SpecFlow/SpecFlowProject1/DOTExercise.csproj
+++ b/WebAutomation.SpecFlow/SpecFlowProject1/DOTExercise.csproj
@@ -37,4 +37,13 @@
     <ProjectReference Include="..\WebAutomation.SpecFlow\WebAutomation.SpecFlow.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AppSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="specflow.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
