--- a/WebAutomation.SpecFlow/SpecFlowProject1/DOTExercise.csproj
+++ b/WebAutomation.SpecFlow/SpecFlowProject1/DOTExercise.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="92.0.4515.10700" />
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.29.1" />
